--- a/module-08/index.html
+++ b/module-08/index.html
@@ -12,70 +12,68 @@
 </head>
 
 <body>
-    <div class="background">
-        <header>
-                <div class="container">
-                    <div class="header">
-                        <div class="wrap-menu">
-                            <ul class="menu">
-                                <li class="menu-li"><a href="#" class="menu-a">Log in</a></li>
-                                <li class="menu-li"><a href="#" class="menu-a">Sign up</a></li>
-                            </ul>
-                            <a href="#" class="menu-url">URLAUBSGLÜCK</a>
-                        </div>
-                        <h2 class="header-h2">Share your holiday dreams</h2>
-                        <h3 class="header-h3">And find the perfect partner to fullfill it</h3>
-                        <form action="#" class="header-form">
-                            <button class="header-button">Find your holiday partner</button>
-                        </form>
-                    </div>
-                </div>
-        </header>
-
-        <main>
-            <section>
-                    <div class="partner container">
-                        <h2 class="partner-h2">Meet a partner for your best holiday</h2>
-                        <ul class="partner-ul">
-                            <li class="partner-li one">
-                                <div class="partner-card">
-                                    <img src="./img/partner1.png" class="partner-img" alt="Bradley Hunter">
-                                    <span class="icon tv"></span>
-                                </div>
-                                <h3 class="partner-name">Bradley Hunter</h3>
-                                <p class="partner-info">Based in Chicago. I love playing tennis and loud music.</p>
-                            </li>
-                            <li class="partner-li two">
-                                <div class="partner-card">
-                                    <img src="./img/partner2.png" class="partner-img" alt="Lucas Marsha">
-                                    <span class="icon bottle"></span>
-                                </div>
-                                <h3 class="partner-name">Lucas Marsha</h3>
-                                <p class="partner-info">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
-                            </li>
-                            <li class="partner-li three">
-                                <div class="partner-card">
-                                    <img src="./img/partner3.png" class="partner-img" alt="Heather Walker">
-                                    <span class="icon cofee"></span>
-                                </div>
-                                <h3 class="partner-name">Heather Walker</h3>
-                                <p class="partner-info">I'm a happy person that loves cats and climbing on mountains.</p>
-                            </li>
-                            <li class="partner-li four">
-                                <div class="partner-card">
-                                    <img src="./img/partner4.png" class="partner-img" alt="Bradley Hunter">
-                                    <span class="icon social"></span>
-                                </div>
-                                <h3 class="partner-name">Bradley Hunter</h3>
-                                <p class="partner-info">Based in Chicago. I love playing tennis and loud music.</p>
-                            </li>
+    <header class="header-wrp">
+            <div class="container">
+                <div class="header">
+                    <div class="wrap-menu">
+                        <ul class="menu">
+                            <li class="menu-li"><a href="#" class="menu-a">Log in</a></li>
+                            <li class="menu-li"><a href="#" class="menu-a">Sign up</a></li>
                         </ul>
-                        <form action="#" class="partner-form">
-                            <button class="partner-button">See other partners</button>
-                        </form>
+                        <a href="#" class="menu-url">URLAUBSGLÜCK</a>
                     </div>
-            </section>
-        </main>
-    </div>
+                    <h2 class="header-h2">Share your holiday dreams</h2>
+                    <h3 class="header-h3">And find the perfect partner to fullfill it</h3>
+                    <form action="#" class="header-form">
+                        <button class="btn header-btn">Find your holiday partner</button>
+                    </form>
+                </div>
+            </div>
+    </header>
+
+    <main>
+        <section class="partner-wrp">
+                <div class="partner container">
+                    <h2 class="partner-h2">Meet a partner for your best holiday</h2>
+                    <ul class="partner-ul">
+                        <li class="partner-li one">
+                            <div class="partner-card">
+                                <img src="./img/partner1.png" class="partner-img" alt="Bradley Hunter">
+                                <span class="icon tv"></span>
+                            </div>
+                            <h3 class="partner-name">Bradley Hunter</h3>
+                            <p class="partner-info">Based in Chicago. I love playing tennis and loud music.</p>
+                        </li>
+                        <li class="partner-li two">
+                            <div class="partner-card">
+                                <img src="./img/partner2.png" class="partner-img" alt="Lucas Marsha">
+                                <span class="icon bottle"></span>
+                            </div>
+                            <h3 class="partner-name">Lucas Marsha</h3>
+                            <p class="partner-info">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
+                        </li>
+                        <li class="partner-li three">
+                            <div class="partner-card">
+                                <img src="./img/partner3.png" class="partner-img" alt="Heather Walker">
+                                <span class="icon cofee"></span>
+                            </div>
+                            <h3 class="partner-name">Heather Walker</h3>
+                            <p class="partner-info">I'm a happy person that loves cats and climbing on mountains.</p>
+                        </li>
+                        <li class="partner-li four">
+                            <div class="partner-card">
+                                <img src="./img/partner4.png" class="partner-img" alt="Bradley Hunter">
+                                <span class="icon social"></span>
+                            </div>
+                            <h3 class="partner-name">Bradley Hunter</h3>
+                            <p class="partner-info">Based in Chicago. I love playing tennis and loud music.</p>
+                        </li>
+                    </ul>
+                    <form action="#" class="partner-form">
+                        <button class="btn partner-btn">See other partners</button>
+                    </form>
+                </div>
+        </section>
+    </main>
 </body>
 </html>
