--- a/module-10/index.html
+++ b/module-10/index.html
@@ -26,14 +26,17 @@
                     <li class="menu__item"><a href="#" class="link menu__link">Work</a></li>
                     <li class="menu__item"><a href="#" class="link menu__link">Blog</a></li>
                     <li class="menu__item"><a href="#" class="link menu__link">Contact</a></li>
-                    <li class="menu__item"><a href="#">
-                        <svg class="menu__svg" width="18" height="15">
-                            <use href="../img/svg/SHOPPING CART.svg#cart"></use>
-                        </svg></a></li>
+                    <li class="menu__item">
+                        <a href="#">
+                            <svg class="menu__svg" width="18" height="15">
+                                <use href="./img/svg/SHOPPING CART.svg#cart"></use>
+                            </svg>
+                        </a></li>
                     <li class="menu__item"><a href="#">
                         <svg class="menu__svg" width="18" height="18">
-                            <use href="../img/svg/MAGNIFYING GLASS.svg#glass"></use>
-                        </svg></a></li>
+                            <use href="./img/svg/MAGNIFYING GLASS.svg#glass"></use>
+                        </svg>
+                    </a></li>
                 </ul>
             </nav>
             <h3 class="page-header__about">Creative Template</h3>
