--- a/module-10/index.html
+++ b/module-10/index.html
@@ -29,17 +29,12 @@
                     <li class="menu__item">
                         <a href="#">
                             <svg class="menu__svg" width="18" height="15">
-                                <use href="/img/svg/SHOPPING CART.svg#cart"></use>
+                                <use href="./img/svg/SHOPPING CART.svg#cart"></use>
                             </svg>
                         </a></li>
                     <li class="menu__item"><a href="#">
                         <svg class="menu__svg" width="18" height="18">
                             <use href="./img/svg/MAGNIFYING GLASS.svg#glass"></use>
-                        </svg>
-                    </a></li>
-                    <li class="menu__item"><a href="#">
-                        <svg class="menu__svg" width="18" height="18">
-                            <use href="../img/svg/MAGNIFYING GLASS.svg#glass"></use>
                         </svg>
                     </a></li>
                 </ul>
