--- a/module-10/index.html
+++ b/module-10/index.html
@@ -16,7 +16,7 @@
         <div class="container-fluid container-fluid--header">
         <div class="page-header container">
             <nav class="page-nav">
-                <a href="#" class="logo">
+                <a href="#" class="link logo">
                     <img srcset="./img/MoGo.png 86w, ./img/MoGo@2x.png 172w"
                     sizes="86px" src="./img/MoGo.png" alt="mogo" height="23">
                 </a>
@@ -27,16 +27,19 @@
                     <li class="menu__item"><a href="#" class="link menu__link">Blog</a></li>
                     <li class="menu__item"><a href="#" class="link menu__link">Contact</a></li>
                     <li class="menu__item">
-                        <a href="#">
+                        <a href="#" class="link">
                             <svg class="menu__svg" width="18" height="15">
                                 <use href="./img/svg/SHOPPING CART.svg#cart"></use>
                             </svg>
-                        </a></li>
-                    <li class="menu__item"><a href="#">
-                        <svg class="menu__svg" width="18" height="18">
-                            <use href="./img/svg/MAGNIFYING GLASS.svg#glass"></use>
-                        </svg>
-                    </a></li>
+                        </a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="link">
+                            <svg class="menu__svg" width="18" height="18">
+                                <use href="./img/svg/MAGNIFYING GLASS.svg#glass"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
             </nav>
             <h3 class="page-header__about">Creative Template</h3>
